# agentos

./: .gitignore  AGENTS.md  BUGS.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.template.md  LICENSE  README.md
orchestrator/: pyproject.toml
orchestrator/agentos/: __init__.py
orchestrator/agentos/core/: agent_loader.py  ask_human.py  briefing.py  budget.py  config.py  cos_review.py  cron.py  day_end.py  deadlines.py  followups.py  init_setup.py  killswitch.py  limits.py  meeting_prep.py  memory_context.py  memory_store.py  onboard.py  plan_project.py  router.py  run_store.py  sprint_executor.py  weekly_plan.py  workflow_loader.py  workflow_runner.py  worktree.py
orchestrator/agentos/cost_analytics/: __init__.py  aggregator.py  mapping.py  store.py
orchestrator/agentos/entrypoints/: api_server.py  cli.py  mcp_server.py
orchestrator/agentos/insights/: aggregator.py  loader.py
orchestrator/agentos/notify/: email_sender.py  notifier.py
orchestrator/agentos/pipelines/: loader.py
orchestrator/agentos/providers/: agentcli_runtime.py  base.py  claude.py  claude_code.py  hermes_runtime.py  ollama.py  openai.py  pricing.py
orchestrator/agentos/seo/: __init__.py  loader.py  remediate.py
orchestrator/agentos/storage/: file_store.py  linear_store.py  local_store.py  store_factory.py  task_store.py
orchestrator/agentos/tests/: conftest.py  test_agent_loader.py  test_api_server.py  test_ask_human.py  test_briefing.py  test_budget.py  test_claude_code_provider.py  test_claude_live.py  test_cost_analytics.py  test_cron.py  test_example_project.py  test_file_store.py  (+28 more)
(+70 files in other folders)
