[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentos"
version = "0.1.0"
description = "Model-agnostic agentic OS — orchestrator, agents, workflows, dashboard"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "rich>=13.0.0",
    "fastmcp>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]
mcp = [
    "fastmcp>=0.4.0",
]

[project.scripts]
agentos = "agentos.entrypoints.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agentos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires real API keys (deselect with -m 'not integration')",
]
